# webhook-server

./: CHANGELOG.md  Cargo.toml  README.md  default-config.yml  test.sh  webhook_config.yml  webhook_server.yml
.github/workflows/: package-binary.yml  rust.yml  test.yml
misc/: nginx_route  webhook-server.service  webhookserver.service
src/: authentication.rs  main.rs  messages.rs  queue_actor.rs  scheduler.rs  settings.rs  task.rs  task_actor.rs  task_executor.rs  task_queue.rs  template.rs  web.rs
src/task/: mod.rs  queue.rs  task.rs
src/web/: authentication.rs  helper.rs  mod.rs  routes.rs
