[package]
name = "webhook-server"
description = "A simple web server to easily execute scripts/executables on incoming requests."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
repository = "https://github.com/nukesor/webhook-server"
homepage = "https://github.com/nukesor/webhook-server"
documentation = "https://docs.rs/webhook-server"
license = "MIT"
keywords = ["webhook", "server", "script", "executor", "https"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "webhookserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1", features = ["rust-tls"] }
actix = "0.8"
handlebars = "2.0"
chrono = { version = "0.4", features = ["serde"] }

config = "0.9"
dirs = "2"
anyhow = "1"
log = "0.4"
simplelog = "0.7"

subprocess = "0.1"

serde = "1"
serde_yaml = "0.8"
serde_json = "1"
hex = "0.4"

hmac = "0.7"
sha-1 = "0.8"
futures = "0.1"

base64 = "0.10"

[dependencies.rustls]
version = "0.15"
