[package]
name = "webhook-server"
description = "A simple web server to easily execute scripts/executables on incoming requests."
version = "0.1.4"
authors = ["Arne Beer <contact@arne.beer>"]
repository = "https://github.com/nukesor/webhook-server"
homepage = "https://github.com/nukesor/webhook-server"
documentation = "https://docs.rs/webhook-server"
license = "MIT"
keywords = ["webhook", "server", "script", "executor", "https"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "webhookserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.16"
actix = "0.10.0-alpha.2"
actix-rt = "1.0.0"
actix-web = { version = "2", features=["rustls"]}
handlebars = "3"
chrono = { version = "0.4", features = ["serde"] }

config = "0.10"
dirs = "2"
anyhow = "1"
log = "0.4"
simplelog = "0.7"

subprocess = "^0.2"

serde = "1"
serde_yaml = "0.8"
serde_json = "1"
hex = "0.4"

hmac = "0.7"
sha-1 = "0.8"
futures = "0.3"

base64 = "0.12"
