[package]
name = "webhook-server"
description = "A simple web server to easily execute scripts/executables on incoming requests."
version = "0.1.5-alpha.0"
authors = ["Arne Beer <contact@arne.beer>"]
repository = "https://github.com/nukesor/webhook-server"
homepage = "https://github.com/nukesor/webhook-server"
documentation = "https://docs.rs/webhook-server"
license = "MIT"
keywords = ["webhook", "server", "script", "executor", "https"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "webhookserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
simplelog = "0.10"
config = "0.11"
dirs = "4"
chrono = { version="0.4", features=["serde"] }
futures = "0.3"

actix = "0.12"
actix-rt = "2"
actix-web = { version="4.0.0-beta.10", features=["rustls"] }
rustls = "0.20"
rustls-pemfile = "0.2"

serde = "1"
serde_yaml = "0.8"
serde_json = "1"
handlebars = "4"
subprocess = "^0.2"

hmac = "0.11"
sha-1 = "0.9"
base64 = "0.13"
hex = "0.4"
